--- a/frappe/core/doctype/system_settings/system_settings.json
+++ b/frappe/core/doctype/system_settings/system_settings.json
@@ -1,6 +1,6 @@
 {
  "actions": [],
- "creation": "2014-04-17 16:53:52.640856",
+ "creation": "2023-05-12 14:28:54.240800",
  "doctype": "DocType",
  "document_type": "System",
  "engine": "InnoDB",
@@ -44,6 +44,7 @@
   "password_settings",
   "logout_on_password_reset",
   "force_user_to_reset_password",
+  "reset_password_link_expiry_duration",
   "password_reset_limit",
   "column_break_31",
   "enable_password_policy",
@@ -485,12 +486,17 @@
    "fieldtype": "Select",
    "label": "First Day of the Week",
    "options": "Sunday\nMonday\nTuesday\nWednesday\nThursday\nFriday\nSaturday"
+  },
+  {
+   "fieldname": "reset_password_link_expiry_duration",
+   "fieldtype": "Duration",
+   "label": "Reset Password Link Expiry Duration"
   }
  ],
  "icon": "fa fa-cog",
  "issingle": 1,
  "links": [],
- "modified": "2022-01-04 11:28:34.881192",
+ "modified": "2023-06-13 17:29:58.057126",
  "modified_by": "Administrator",
  "module": "Core",
  "name": "System Settings",
